# rl4co

./: .gitignore  .gitmodules  CLAUDE.md  pyproject.toml
examples/: 1-quickstart.ipynb
experiments/POMO_TSP_baseline/: main.py  test.py
experiments/POMO_eval/: pyproject.toml  test_hk.py  test_pomo_tsp.py  test_pomo_tsp_case.py  train_pomo_tsp.py
experiments/POMO_eval/LKH-3.0.14/LKH.dSYM/Contents/: Info.plist
experiments/POMO_eval/LKH-3.0.14/LKH.dSYM/Contents/Resources/DWARF/: LKH
experiments/POMO_eval/LKH-3.0.14/LKH.dSYM/Contents/Resources/Relocations/aarch64/: LKH.yml
experiments/POMO_eval/configs/: pomo_tsp_main.yaml
experiments/POMO_eval/configs/callbacks/: default.yaml
experiments/POMO_eval/configs/logger/: wandb.yaml
experiments/POMO_eval/configs/paths/: default.yaml
experiments/POMO_eval/configs/trainer/: default.yaml
experiments/POMO_eval/utils/: HK.py  gmm_tsp.py  lkh_tsp.py
experiments/decompose-on-edges/: README.md  implementation.md  pyproject.toml
experiments/decompose-on-edges/LKH-2.0.11/: LKH
experiments/decompose-on-edges/LKH-2.0.11/LKH.dSYM/Contents/Resources/DWARF/: LKH
experiments/decompose-on-edges/LKH-2.0.11/LKH.dSYM/Contents/Resources/Relocations/aarch64/: LKH.yml
experiments/decompose-on-edges/LKH-2.0.11/SRC/: BridgeGain.c  CreateCandidateSet.c  Gain23.c  LKHmain.c  LinKernighan.c  Makefile  MergeWithTourCLARIST.c  ReadParameters.c  ReadProblem.c
experiments/decompose-on-edges/notes/: LKH3-configs.md  ideas.md  neurolkh-configs.md
experiments/decompose-on-edges/scripts/: run_alpha_nearness.py
experiments/decompose-on-edges/utils/: alpha_nearness.py  farthest_insertion.py  lkh_runner.py  neurolkh_runner.py
experiments/edge_quality_predictor/: README.md  implementation.md  metrics.md  pyproject.toml  test_eqp.py  train_eqp.py
experiments/edge_quality_predictor/configs/: eqp_main.yaml
experiments/edge_quality_predictor/configs/callbacks/: default.yaml  model_checkpoint.yaml  model_summary.yaml
experiments/edge_quality_predictor/configs/hydra/: default.yaml
experiments/edge_quality_predictor/configs/logger/: wandb.yaml
experiments/edge_quality_predictor/configs/paths/: default.yaml
experiments/edge_quality_predictor/configs/trainer/: default.yaml
experiments/edge_quality_predictor/data/: README.md
experiments/edge_quality_predictor/eqp/: __init__.py
experiments/edge_quality_predictor/eqp/data/: __init__.py  dataset.py  intermediate_tours.py  tsp_data.py
experiments/edge_quality_predictor/eqp/eval/: __init__.py  edge_metrics.py
experiments/edge_quality_predictor/eqp/lightning/: __init__.py  data.py  module.py
experiments/edge_quality_predictor/eqp/model/: __init__.py  classifier.py  losses.py  sgn.py
experiments/learn_decompose_eval/: .gitignore  CLAUDE.md  IMPLEMENTATION_REPORT.md  README.md  pyproject.toml
experiments/learn_decompose_eval/LKH-3.0.14/SRC/: FindTour.c  LKH.c  LKHmain.c  Makefile  ReadParameters.c  ReadProblem.c
experiments/learn_decompose_eval/LKH-3.0.14/SRC/INCLUDE/: LKH.h
experiments/learn_decompose_eval/configs/: main.yaml
experiments/learn_decompose_eval/configs/callbacks/: default.yaml
experiments/learn_decompose_eval/configs/env/: cvrp.yaml
experiments/learn_decompose_eval/configs/experiment/learn_decompose_eval/: bcc_lkh_cvrp.yaml  raw_lkh_cvrp.yaml
experiments/learn_decompose_eval/configs/extras/: default.yaml
experiments/learn_decompose_eval/configs/logger/: csv.yaml  wandb.yaml
experiments/learn_decompose_eval/configs/paths/: default.yaml
experiments/learn_decompose_eval/configs/trainer/: default.yaml
experiments/learn_decompose_eval/learn_decompose_eval/: __init__.py  __main__.py  cli.py
experiments/learn_decompose_eval/learn_decompose_eval/solvers/: __init__.py  classical_lkh.py  decomposition.py  lkh_format.py  orchestration.py
experiments/learn_decompose_eval/scripts/: build_lkh.sh  run_eval.sh  submit_lkh.sh  submit_lkh_bcc.sh
experiments/learn_decompose_eval/tests/: conftest.py  test_classical_lkh.py  test_decomposition.py  test_lkh_format.py  test_logging_errors.py  test_stitch.py
experiments/nrp_eval/: .gitignore  README.md  config.md  pyproject.toml
experiments/nrp_eval/configs/: main.yaml
experiments/nrp_eval/configs/env/: cvrp.yaml  mtsp.yaml  op.yaml  pctsp.yaml  sdvrp.yaml  spctsp.yaml  tsp.yaml
experiments/nrp_eval/configs/experiment/nrp_eval/: am_tsp.yaml  builtin_tsp.yaml  ortools_cvrp.yaml  ortools_tsp.yaml  pomo_cvrp.yaml  pomo_tsp.yaml  symnco_tsp.yaml
experiments/nrp_eval/configs/extras/: default.yaml
experiments/nrp_eval/configs/hydra/: default.yaml
experiments/nrp_eval/configs/logger/: wandb.yaml
experiments/nrp_eval/configs/model/: am.yaml  matnet.yaml  pomo.yaml  symnco.yaml
experiments/nrp_eval/configs/paths/: default.yaml
experiments/nrp_eval/configs/trainer/: default.yaml
experiments/nrp_eval/dev/: phase1.md
experiments/nrp_eval/nrp/: __init__.py  __main__.py  cli.py
experiments/nrp_eval/nrp/data/: __init__.py  benchmarks.py  dataset.py  generation.py  splits.py
experiments/nrp_eval/nrp/envs/: __init__.py  dataset_factory.py  env_registry.py  factory.py
experiments/nrp_eval/nrp/harness/: __init__.py  evaluate.py  runner.py  timing.py  train.py
experiments/nrp_eval/nrp/solvers/: __init__.py  base.py  classical.py  rl.py
experiments/nrp_eval/nrp/utils/: __init__.py  device.py  logging.py  metrics.py  pkl.py  reproducibility.py
experiments/nrp_eval/scripts/: eval.py  install_classical_solvers.sh  sweep.py  train.py
experiments/nrp_eval/tests/: conftest.py  smoke_test.py  test_classical_solver.py  test_dataset_factory.py  test_evaluate.py  test_hydra_config.py  test_metrics.py  test_registry.py  test_reproducibility.py  test_rl_solver.py
