[project]
name = "rl4co"
version = "0.6.0"
description = "RL4CO: an Extensive Reinforcement Learning for Combinatorial Optimization Benchmark"
authors = [
    { name = "Federico Berto", email = "berto.federico2@gmail.com" },
    { name = "Chuanbo Hua", email = "cbhua@kaist.ac.kr" },
    { name = "Junyoung Park", email = "junyoungpark.ml@gmail.com" },
    { name = "Laurin Luttmann", email = "laurin.luttmann@gmail.com" },
    { name = "Yining Ma" },
    { name = "Fanchen Bu" },
    { name = "Jiarui Wang" },
    { name = "Haoran Ye" },
    { name = "Minsu Kim" },
    { name = "Sanghyeok Choi" },
    { name = "Zepeda Gast" },
    { name = "Andre Hottung" },
    { name = "Jianan Zhou" },
    { name = "Jieyi Bi" },
    { name = "Yu Hu" },
    { name = "Fei Liu" },
    { name = "Hyeonah Kim" },
    { name = "Jiwoo Son" },
    { name = "Haeyeon Kim" },
    { name = "Davide Angioni" },
    { name = "Wouter Kool" },
    { name = "Zhiguang Cao" },
    { name = "Jie Zhang" },
    { name = "Kijung Shin" },
    { name = "Cathy Wu" },
    { name = "Sungsoo Ahn" },
    { name = "Guojie Song" },
    { name = "Changhyun Kwon" },
    { name = "Lin Xie" },
    { name = "Jinkyoo Park" },
    { name = "AI4CO" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "reinforcement learning",
    "combinatorial optimization",
    "benchmark",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "einops==0.8.2",
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "lightning==2.6.4",
    "matplotlib==3.10.9",
    "omegaconf",
    "pyrootutils",
    "rich",
    "robust-downloader",
    "scipy",
    "tensordict>=0.6.0",
    "torchrl>=0.6.0",
    "wandb",
    "tensorboard>=2.20.0",
    "ortools>=9.15.6755",
    "absl-py==2.4.0",
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "asttokens==3.0.1",
    "attrs==26.1.0",
    "babel==2.18.0",
    "backrefs==7.0",
    "beautifulsoup4==4.14.3",
    "black==26.5.1",
    "bleach==6.3.0",
    "certifi==2026.5.20",
    "cfgv==3.5.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "colorlog==6.10.1",
    "comm==0.2.3",
    "coverage==7.14.0",
    "cuda-bindings==13.2.0",
    "cuda-pathfinder==1.5.4",
    "cuda-toolkit==13.0.2",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.3.1",
    "defusedxml==0.7.1",
    "distlib==0.4.0",
    "execnet==2.1.2",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "filelock==3.29.0",
    "fonttools==4.63.0",
    "frozenlist==1.8.0",
    "fsspec==2026.4.0",
    "ghp-import==2.1.0",
    "gitdb==4.0.12",
    "gitpython==3.1.50",
    "griffe==2.0.2",
    "griffe-inherited-docstrings==1.1.3",
    "griffe-typingdoc==0.3.1",
    "griffecli==2.0.2",
    "griffelib==2.0.2",
    "grpcio==1.80.0",
    "identify==2.6.19",
    "idna==3.16",
    "immutabledict==4.3.1",
    "importlib-metadata==9.0.0",
    "iniconfig==2.3.0",
    "ipykernel==7.2.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.20.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "jupyterlab-pygments==0.3.0",
    "jupytext==1.19.3",
    "kiwisolver==1.5.0",
    "lightning-utilities==0.15.3",
    "llvmlite==0.47.0",
    "markdown==3.10.2",
    "markdown-gfm-admonition==0.3.0",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.2",
    "mdit-py-plugins==0.6.1",
    "mdurl==0.1.2",
    "mdx-breakless-lists==1.0.1",
    "mdx-truly-sane-lists==1.3",
    "mergedeep==1.3.4",
    "mike==2.2.0",
    "mistune==3.2.1",
    "mkdocs==1.6.1",
    "mkdocs-autolinks-plugin==0.7.1",
    "mkdocs-autorefs==1.4.4",
    "mkdocs-get-deps==0.2.2",
    "mkdocs-jupyter==0.26.3",
    "mkdocs-material==9.7.6",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-redirects==1.2.3",
    "mkdocs-same-dir==0.1.5",
    "mkdocstrings==1.0.4",
    "mkdocstrings-python==2.0.3",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "mypy-extensions==1.1.0",
    "narwhals==2.22.1",
    "nbclient==0.10.4",
    "nbconvert==7.17.1",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "nodeenv==1.10.0",
    "numba==0.65.1",
    "nvidia-cublas==13.1.1.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.3.3",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-xdist>=3.7.0",
    "black",
]
graph = ["torch_geometric"]
routing = [
    "numba>=0.58.1",
    "pyvrp>=0.9.0 ; python_version < '4.0'",
]
experiments = [
    "vrplib",
    "scikit-learn",
    "numpy",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
    "mike",
    "mkdocs-jupyter",
    "mkdocs-redirects",
    "mkdocs-autolinks-plugin",
    "griffe-typingdoc",
    "griffe-inherited-docstrings",
    "griffe",
    "black",
    "mkdocs-same-dir",
    "mdx-breakless-lists",
    "mdx-truly-sane-lists",
    "markdown-gfm-admonition",
]

[project.urls]
Homepage = "https://rl4co.ai4co.org"
Repository = "https://github.com/ai4co/rl4co"
Documentation = "https://rl4co.ai4co.org"
Tracker = "https://github.com/ai4co/rl4co/issues"

[tool.hatch.build.targets.sdist]
include = ["rl4co"]

[tool.hatch.build.targets.wheel]
include = ["rl4co"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
show-fixes = false
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["F", "E", "W", "I001", "UP"]
ignore = ["E501"]  # Ignore line too long errors
task-tags = ["TODO", "FIXME"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = []
known-third-party = []
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
combine-as-imports = true
split-on-trailing-comma = false
lines-between-types = 1


[tool.coverage]
include = ["rl4co.*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Lines to exclude from coverage report (e.g., comments, debug statements)
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
