[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edge_quality_predictor"
version = "0.1.0"
description = "Take an TSP solution instance and predict the probability of each edge being in the optimal solution."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "rl4co",
    "torch>=2.0",
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "black"]

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["F", "E", "W", "I001", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
