[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nrp"
version = "0.1.0"
description = "NRP evaluation pipeline (built on RL4CO)"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "rl4co",
    "hydra-core",
    "omegaconf",
    "tensordict>=0.6.0",
    "torchrl>=0.6.0",
    "torch>=2.0",
    "lightning>=2.1.0",
    "wandb",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "black"]

[tool.hatch.build.targets.wheel]
packages = ["nrp"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["F", "E", "W", "I001", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
